# database_diff

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  export_index.sql  export_query.sql  index.html  sample_index1.json  sample_schema1.json  sample_schema2.json  sample_schema2_with_schema.json  sample_schema3.json  sample_schema4.json  sample_schema5.json  sample_schema6.json  sample_schema7.json  sample_schema8.json  start-docker.sh
src/: index.rs  lib.rs  lib.rs.bak
tests/: drop_table_schema_test.rs  generate_sql_diff_comprehensive_test.rs  generate_sql_diff_key_collision.rs  index_diff_test.rs  integration_test.rs  schema_file_tests.rs  schema_tests.rs  sql_schema_test.rs  table_schema_tests.rs  uploaded_file_test.rs
